# pasua

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: diff.rs  hunk.rs  log.rs  mod.rs  pr.rs  serve.rs  symbols.rs
src/core/: cache.rs  config.rs  diff.rs  git.rs  github.rs  hunk.rs  lsp_confirmation.rs  mod.rs  pipeline.rs  render.rs  semantic.rs  skeletal.rs  worktree.rs
src/languages/: elixir.rs  gleam.rs  go.rs  mod.rs  python.rs  registry.rs  rust.rs  typescript.rs
src/mcp/: mod.rs
