[package]
name = "pasua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6.0.0"
lsp-types = "0.97.0"
rmcp = { version = "0.17.0", features = ["server", "transport-io", "macros"] }
rmp-serde = "1.3.1"
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.6"
tree-sitter-go = "0.25.0"

[dev-dependencies]
tempfile = "3.26.0"
