[package]
name = "pasua"
version = "0.1.1"
edition = "2024"
description = "Semantic code diff for AI agents"
repository = "https://github.com/vitalratel/pasua"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6.0.0"
lsp-types = "0.97.0"
rmcp = { version = "0.17.0", features = ["server", "transport-io", "macros"] }
rmp-serde = "1.3.1"
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.6"
tree-sitter-elixir = "0.3"
tree-sitter-gleam = "1.0"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }
which = "8.0.0"

[dev-dependencies]
tempfile = "3.26.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
